Renamed license file